# chconv

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_zh.md  magic_static.py  main.cpp  version.h.in
cmake/: FindCmdline.cmake  FindIncbin.cmake  FindLibchardet.cmake  FindLibiconv.cmake  FindLibmagic.cmake
test/: test-gb2312.txt
test/.test3/: test3-gbk.txt  test3-utf8bom.txt
